Update install_elk.sh